conversion de exel a json

--- a/interface-grafica/src/interface-grafica-app/interface-grafica-app.html
+++ b/interface-grafica/src/interface-grafica-app/interface-grafica-app.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/vaadin-upload/vaadin-upload.html">
+
 
 <dom-module id="interface-grafica-app">
   <template>
@@ -7,7 +9,9 @@
         display: block;
       }
     </style>
-    <h2>Hello [[prop1]]</h2>
+    
+  <vaadin-upload ></vaadin-upload>
+
   </template>
 
   <script>
