se agrego soporte para XML y CSV

--- a/interface-grafica/src/interface-grafica-app/interface-grafica-app.html
+++ b/interface-grafica/src/interface-grafica-app/interface-grafica-app.html
@@ -10,7 +10,7 @@
       }
     </style>
     
-  <vaadin-upload ></vaadin-upload>
+  <vaadin-upload target="http://localhost:3001" method="POST"></vaadin-upload>
 
   </template>
 
