Soporta traduccion de los campor a español

--- a/interface-grafica/src/interface-grafica-app/interface-grafica-app.html
+++ b/interface-grafica/src/interface-grafica-app/interface-grafica-app.html
@@ -15,7 +15,7 @@
       }
     </style>
     
-  <vaadin-upload  i18n="[[i18n]]" file-reject="prueba" id="rejectEventDemo" name="sampleFile" target="/upload" method="POST"></vaadin-upload>
+  <vaadin-upload  i18n="[[i18n]]" file-reject="prueba" id="rejectEventDemo" name="sampleFile" target="http://localhost:3001/upload" method="POST"></vaadin-upload>
 
   [[datos]]
 
