--- a/servidor/public/src/interface-grafica-app/interface-grafica-app.html
+++ b/servidor/public/src/interface-grafica-app/interface-grafica-app.html
@@ -11,6 +11,7 @@
 <link rel="import" href="../../bower_components/paper-tabs/paper-tab.html">
 <link rel="import" href="../../bower_components/neon-animation/neon-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="../../bower_components/iron-localstorage/iron-localstorage.html">
 
 
 <link rel="import" href="../login-component/login-panel.html">
@@ -31,6 +32,17 @@
           background-color: #333333;
         }
         ;
+      }
+      
+      #lista-archivos {
+
+        background-color: #333333;
+        display: block;
+        margin: 16px;
+        padding: 16px;
+        --paper-card-header-text:{
+          color:white;
+        }
       }
       
       paper-menu {
@@ -74,7 +86,17 @@
       <paper-header-panel main>
         <paper-toolbar></paper-toolbar>
 
-        <vaadin-upload i18n="[[i18n]]" on-upload-before="agregarheader" id="fileupdate" name="sampleFile" target="/upload" method="POST"></vaadin-upload>
+        <vaadin-upload i18n="[[i18n]]" on-upload-response="uploadresponse" on-upload-before="agregarheader" id="fileupdate" name="sampleFile"
+          target="/upload" method="POST"></vaadin-upload>
+
+        <paper-card heading="Lista archivos" id="lista-archivos" image="" elevation="1" animated-shadow="false">
+          <template is="dom-repeat" items="[[listaarchivos]]">
+            <paper-item>
+              [[item]]
+            </paper-item>
+          </template>
+        </paper-card>
+
 
       </paper-header-panel>
     </paper-drawer-panel>
@@ -125,6 +147,11 @@
           type: Boolean,
           value: false
         },
+        listaarchivos: {
+          type: Array,
+          value: []
+        }
+        ,
         i18n: {
           type: Object,
           value: {
@@ -189,18 +216,17 @@
           console.log(data);
           self.set("datos", data)
         });
-
-        this.$.fileupdate.headers = {
-          Authorization: "Bear eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiI1OGZmMTNkYTgyYzZkYzRlNjFiODIzYTMiLCJpYXQiOjE0OTMxNTgxMzgsImV4cCI6MTQ5NDM2NzczOH0.xs7tOjcXYhGQt6ROotjpVPCfXWum-ai0J9k4pP0czEQ"
-        }
       },
       registrado: function () {
         this.set("uregistrado", (this.token.length > 0));
       },
       agregarheader: function () {
         this.$.fileupdate.headers = {
-          Authorization: "Bear "+this.token
+          Authorization: "Bear " + this.token
         }
+      },
+      uploadresponse: function (e) {
+        this.push("listaarchivos", e.detail.file.name);
       }
 
 
