--- a/servidor/public/src/interface-grafica-app/interface-grafica-app.html
+++ b/servidor/public/src/interface-grafica-app/interface-grafica-app.html
@@ -71,7 +71,9 @@
     </style>
 
 
-
+  <iron-localstorage name="token"
+    value="{{token}}"
+  ></iron-localstorage>
 
 
     <paper-drawer-panel hidden$="[[!uregistrado]]">
@@ -96,7 +98,6 @@
             </paper-item>
           </template>
         </paper-card>
-
 
       </paper-header-panel>
     </paper-drawer-panel>
