--- a/servidor/public/src/archivos/grafica-archivo.html
+++ b/servidor/public/src/archivos/grafica-archivo.html
@@ -9,6 +9,9 @@
                 height: 300px;
                 width: 50em;
             }
+            paper-card{
+                width: 100%;
+            }
         </style>
 
         <paper-button on-click="actualiza"></paper-button>
